Fix T92576: Crash switching from Asset Browser to File Brower

The asset catalog filtering data needs to be cleared when with the other
asset library data of the file list. This is done when changing between
asset and file browser (and in other cases).